<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.nouracalculator.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="73dp"
        android:layout_height="35dp"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="108dp"
        android:text="@string/int1"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/int1id"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="69dp"
        android:layout_height="38dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/int2"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/int2id"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="RtlCompat" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="76dp"
        android:layout_height="31dp"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="44dp"
        android:text="@string/op"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlCompat" />

    <Button
        android:id="@+id/calcid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="160dp"
        android:layout_marginTop="32dp"
        android:text="@string/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultid"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="62dp"
        android:layout_height="22dp"
        android:layout_marginBottom="124dp"
        android:layout_marginEnd="8dp"
        android:text="@string/result"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/resultid"
        tools:ignore="RtlCompat" />

    <EditText
        android:id="@+id/int1id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:layout_marginTop="108dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlCompat" />

    <EditText
        android:id="@+id/int2id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/int1id"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/resultid"
        android:layout_width="194dp"
        android:layout_height="46dp"
        android:layout_marginBottom="112dp"
        android:layout_marginEnd="68dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="RtlCompat" />

    <RadioGroup
        android:id="@+id/rgid"
        android:layout_width="93dp"
        android:layout_height="85dp"
        android:layout_marginBottom="176dp"
        android:layout_marginEnd="144dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="RtlCompat">

        <RadioButton
            android:id="@+id/plusid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="+"/>

        <RadioButton
            android:id="@+id/minusid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="-"/>

        <RadioButton
            android:id="@+id/multid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="*"/>

        <RadioButton
            android:id="@+id/divid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="/" />
    </RadioGroup>

</android.support.constraint.ConstraintLayout>
